--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,9 +6,9 @@
 
   <table class="listing" summary="Page list">
     <tr class="header">
-      <th>#</th>
+      <th>Name</th>
       <th>Subject ID</th>
-      <th>Page</th>
+      <th>#</th>
       <th>Permalink</th>
       <th>Visible</th>
       <th>Sections</th>
@@ -16,9 +16,9 @@
     </tr>
     <% @pages.each do |page| %>
       <tr>
-        <td><%=page.position %></td>
-        <td><%= page.subject_id %></td>
         <td><%=page.name %></td>
+        <td><%= page.subject_id %></td>
+        <td><%=page.position %></td>>
         <td><%= page.permalink %></td>
         <td class="center"><%=page.visible ? 'Yes' : 'No' %></td>
         <td class="center"><%=page.sections.size %></td>
