--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Hello World!</h1>
 
+<%= javascript_tag("alert('Hello there');") %>
+<%= link_to('jsWho','#',:onclick => "jsWho('Alex'); return true;") %>
+
