--- a/app/views/sections/delete.html.erb
+++ b/app/views/sections/delete.html.erb
@@ -1,6 +1,6 @@
 <%= link_to("<< Back to List", sections_path, :class => 'back-link') %>
 
-<div class="sections delete">
+<div class="sections delete center">
   <h2>Delete Section</h2>
 
   <%= form_for(@section, :method => 'delete') do |f| %>
