--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -9,7 +9,7 @@
       <th>Section</th>
       <th>Page ID</th>
       <th>#</th>
-      <th>Visible</th>
+      <th class="center">Visible</th>
       <th>Actions</th>
     </tr>
     <% @sections.each do |section| %>
