--- a/app/views/pages/delete.html.erb
+++ b/app/views/pages/delete.html.erb
@@ -1,6 +1,6 @@
 <%= link_to("<< Back to List", pages_path, :class => 'back-link') %>
 
-<div class="pages delete">
+<div class="pages delete center">
   <h2>Delete Page</h2>
 
   <%= form_for(@page, :method => 'delete') do |f| %>
