--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -7,7 +7,7 @@
 
     <%= render(:partial => 'form',:locals => {:f => f}) %>
 
-    <div class="form-butons">
+    <div class="form-buttons">
       <%=f.submit("Create Page") %>
     </div>
   <% end %>
