--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -7,7 +7,7 @@
 
     <%= render(:partial => 'form',:locals =>{:f => f}) %>
 
-    <div class="form-butons">
+    <div class="form-buttons">
       <%=f.submit("Create Section") %>
     </div>
   <% end %>
