--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,14 +1,14 @@
-<table>
+<table align="center">
   <tr>
     <th>Name</th>
     <td><%= f.text_field(:name) %></td>
   </tr>
   <tr>
     <th>Position</th>
-    <td><%= f.text_field(:position) %></td>
+    <td><%= f.select(:position, 1..@subject_count) %></td>
   </tr>
   <tr>
     <th>Visible</th>
-    <td><%= f.text_field(:visible) %></td>
+    <td><%= f.check_box(:visible) %></td>
   </tr>
 </table>
