--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,13 +1,14 @@
 <div class="subjects index">
   <h2>Subjects</h2>
 
+  <%= image_tag('plus_sign.png',:size => '11x11', :alt => '+') %>
   <%= link_to("Add new subject", new_subject_path,:class => 'action new') %>
 
   <table class="listing" summary="Subject list">
     <tr class="header">
       <th>#</th>
       <th>Subject</th>
-      <th>Visible</th>
+      <th class="center">Visible</th>
       <th>Pages</th>
       <th>Actions</th>
     </tr>
@@ -16,7 +17,7 @@
         <td><%=subject.position %></td>
         <td><%=subject.name %></td>
         <td class="center"><%=status_tag(subject.visible) %></td>
-        <td class="center"><%=subject.pages.size %></td>
+        <td><%=subject.pages.size %></td>
         <td class="actions">
           <%= link_to("Show", subject_path(subject),:class => 'action show') %>
           <%= link_to("Edit", edit_subject_path(subject),:class => 'action edit') %>
