--- a/app/views/subjects/delete.html.erb
+++ b/app/views/subjects/delete.html.erb
@@ -1,6 +1,8 @@
+<% @page_title = "Delete Subject" %>
+
 <%= link_to("<< Back to List", subjects_path, :class => 'back-link') %>
 
-<div class="subjects delete center  ">
+<div class="subjects delete center">
   <h2>Delete Subject</h2>
 
   <%= form_for(@subject, :method => 'delete') do |f| %>
