--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,3 +1,7 @@
+<% @page_title = "All Subjects" %>
+
+<%= link_to("<< Back to Menu",admin_path,:class => 'back-link') %>
+
 <div class="subjects index">
   <h2>Subjects</h2>
 
@@ -19,6 +23,7 @@
         <td class="center"><%=status_tag(subject.visible) %></td>
         <td><%=subject.pages.size %></td>
         <td class="actions">
+          <%= link_to("View Pages", pages_path(:subject_id => subject.id), :class => 'action show') %>
           <%= link_to("Show", subject_path(subject),:class => 'action show') %>
           <%= link_to("Edit", edit_subject_path(subject),:class => 'action edit') %>
           <%= link_to("Delete", delete_subject_path(subject),:class => 'action delete') %>
